--- a/src/index.css
+++ b/src/index.css
@@ -71,6 +71,8 @@ select:focus {
   outline: none;
 }
 nav {
+  padding-top: 10px;
+  padding-bottom: 10px;
   margin-left: auto;
   margin-right: auto;
   width: fit-content;
@@ -106,4 +108,8 @@ form {
   padding: 10px;
   background-color: #009879;
   color: white;
+}
+#error {
+  color: rgb(192, 23, 23);
+  font-weight: bold;
 }
