--- a/src/index.css
+++ b/src/index.css
@@ -137,3 +137,13 @@ h2 {
   border-top-left-radius: 10px;
   border-top-right-radius: 10px;
 }
+.searchBar {
+  padding: 3px;
+  padding-left: 8px;
+  width: auto;
+  background-color: #009879;
+  color: whitesmoke;
+}
+.searchBar input {
+  margin: 5px;
+}
